--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Bienvenido a mi sitio</h1>
-    <button>Ingresar</button>
+    <button>informacion de la empresa</button>
 </body>
 </html>
