--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 <body>
     <h1>Bienvenido a mi sitio</h1>
     <button>informacion de la empresa</button>
+    <a href="nosotros.html">
+        <button>nosotros</button>
+    </a>
 </body>
 </html>
